[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Juha Paananen <juha.paananen@gmail.com>"]

[dependencies]
itertools = "0.7.8"
nom = "4.1.1"

[[bin]]
name = "1a"
path = "./1a.rs"

[[bin]]
name = "1b"
path = "./1b.rs"

[[bin]]
name = "2a"
path = "./2a.rs"

[[bin]]
name = "2b"
path = "./2b.rs"

[[bin]]
name = "3a"
path = "./3a.rs"

[[bin]]
name = "5a"
path = "./5a.rs"

[[bin]]
name = "6a"
path = "./6a.rs"

[[bin]]
name = "7a"
path = "./7a.rs"

[[bin]]
name = "6b"
path = "./6b.rs"
